src/objects/Bulk_Close__c.object
<CustomObject>
    <description>An object used for the storing of bulk close history/transactions.</description>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The requester of the bulk closure.</description>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Close_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request_Closure_Comments__c</fullName>
        <description>The comments for the case closure.</description>
        <label>Service Request Closure Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Request_Number__c</fullName>
        <description>The service request number.</description>
        <label>Service Request Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status for the object&apos;s request.</description>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bulk Close Log</label>
    <listViews>
        <fullName>BulkClose_Logs</fullName>
        <columns>NAME</columns>
        <columns>Service_Request_Number__c</columns>
        <columns>Service_Request_Closure_Comments__c</columns>
        <columns>Status__c</columns>
        <columns>Requester__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>BulkClose Logs</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Close Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>